<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HwR</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_addsensor">Add Sensor</string>
    <string name="action_help_server">Help</string>
    <string name="action_cleardatabase">Clear Database</string>
    <string name="action_addserver">Add Server</string>
    <string name="action_editserver">Edit Server</string>
    <string name="action_removeserver">Remove Server</string>
    <string name="action_connecttoserver">Connect to Server</string>
    <string name="action_disconnectfromserver">Disconnect from Server</string>
    <string name="action_settings">Settings</string>
    <string name="status_string">Status: </string>
    <string name="desc_add_new_server">Add new Server</string>
    <string name="task_cancelled">Task cancelled</string>
    <string name="task_completed">Task completed</string>

    <string-array name="ip_list_menu">
        <item>Connect</item>
        <item>Delete</item>
    </string-array>

    <string name="connection_lost_title">Connection lost</string>
    <string name="connection_lost_message">Connection to server was lost or could not be established!</string>


    <string-array name="sensor_list_menu">
        <item>Settings</item>
        <item>Delete</item>
    </string-array>


    <string name="shared_pref_key">com.threedevs.aj.hwr_shared_pref_key</string>

    <string name="setting_use_dark_theme">Use dark theme (you might need to restart app)</string>
    <string name="setting_use_dark_theme_pref">use_dark_theme</string>

    <string name="setting_keep_screen_on">Keep screen on (when showing sensors)</string>
    <string name="setting_keep_screen_on_pref">keep_screen_on</string>

    <string name="setting_auto_connect_last_server">Connect to last server on start</string>
    <string name="setting_auto_connect_last_server_pref">auto_connect_last_server_pref</string>
    <string name="setting_last_server_pref">last_server_pref</string>


    <string name="setting_use_graph">Use graphs instead of gauges</string>
    <string name="setting_use_graph_pref">use_graph_perf</string>


    <string name="setting_custom_font_scale_lbl">Custom font scale</string>
    <string name="setting_custom_font_scale_pref">custom_font_scale_pref</string>
    <string name="setting_custom_font_scale_value_pref">custom_font_scale_value_pref</string>

    <string name="setting_custom_temp_scale_lbl">Custom temperature scale (°C)</string>
    <string name="setting_custom_temp_scale_pref">custom_temp_scale_pref</string>

    <string name="setting_custom_temp_scale_min">min. temp.</string>
    <string name="setting_custom_temp_scale_min_pref">custom_temp_scale_min_pref</string>

    <string name="setting_custom_temp_scale_max">max. temp.</string>
    <string name="setting_custom_temp_scale_max_pref">custom_temp_scale_max_pref</string>

    <string name="setting_wipe_db">Wipe database (can\'t be undone!!!)</string>




    <string name="sensor_index">ID</string>
    <string name="sensor_save">Save</string>
    <string name="sensor_cancel">Cancel</string>

    <string name="server_status">Status</string>

    <string name="title_activity_application_settings">Settings</string>

    <!-- INTRO STUFF -->
    <string name="intro_slide_1_title">Hi, I am HwR.</string>
    <string name="intro_slide_1_description">I can read sensor data from your windows PC.</string>

    <string name="intro_slide_2_title">Help</string>
    <string name="intro_slide_2_description">You can always lookup how everything works in the menu.</string>

    <string name="intro_slide_3_title">Beta</string>
    <string name="intro_slide_3_description">I am still unfinished at this point so please report what ever error u find :)</string>


    <!-- set up a server -->
    <string name="server_slide_1_title">Server connection setup.</string>
    <string name="server_slide_1_description">In order to setup a connection to the server we need a few things...</string>

    <string name="server_slide_2_title">Get HWiNFO</string>
    <string name="server_slide_2_description">Get HWiNFO from www.hwinfo.com and install it on your PC.</string>

    <string name="server_slide_3_title">Setup HWiNFO</string>
    <string name="server_slide_3_description">Start HWiNFO, go to settings and make sure "Shared Memory Support" is checked.</string>

    <string name="server_slide_4_title">Start HWiNFO sensors</string>
    <string name="server_slide_4_description">Now start the sensors in HWiNFO. You can minimize all HWiNFO windows now or restart HWiNFO with sensors only.</string>


    <string name="server_slide_5_title">Get HwInfoTransmitter</string>
    <string name="server_slide_5_description">Get HwInfoTransmitter from  blog.sigsegowl.xyz/?p=972 and install it on your PC.</string>

    <string name="server_slide_6_title">Get your IP</string>
    <string name="server_slide_6_description">HwInfoTransmitter shows your IPs. Get your local IP.</string>

    <string name="server_slide_7_title">Firewalls</string>
    <string name="server_slide_7_description">Make sure your firewall allows connections!</string>

    <string name="server_slide_8_title">Network</string>
    <string name="server_slide_8_description">Make sure both devices are in the same network!</string>

    <string name="server_slide_9_title">Add a server</string>
    <string name="server_slide_9_description">Press on the "add server" icon and enter the previously obtained IP and confirm it.</string>

    <string name="server_slide_10_title">Establish a connection</string>
    <string name="server_slide_10_description">Your previously added IP address is now in the list. Long press on it and press connect. Thats it :)</string>


    <!--sensor -->
    <string name="sensor_slide_1_title">Sensors</string>
    <string name="sensor_slide_1_description">This is a sensor reading. The following few slides explain how to create and setup sensors.</string>

    <string name="sensor_slide_2_title">Add sensors</string>
    <string name="sensor_slide_2_description">Once u established a connection to a server u can add new sensors by pressing on the "add sensor" button.</string>

    <string name="sensor_slide_3_title">Modify a sensor</string>
    <string name="sensor_slide_3_description">Long press on a sensor and you can set it up or remove it.</string>

    <string name="sensor_slide_4_title">Setup a sensor</string>
    <string name="sensor_slide_4_description">Press on "Settings" and select any reading from the list and the sensor is set up!</string>





    <!-- update -->
    <string name="appupdate_slide_1_title">Update</string>
    <string name="appupdate_slide_1_description">The desktop application received an update! Visit blog.sigsegowl.xyz/?page_id=982 to download it.</string>

    <string name="appupdate_slide_2_title">Sorry</string>
    <string name="appupdate_slide_2_description">You have to set up your sensors again...</string>

    <string name="appupdate_slide_3_title">But!</string>
    <string name="appupdate_slide_3_description">You don\'t have to look up any numbers anymore :) Just choose from your phone the sensors you need!</string>


    <!-- update with graphs -->
    <string name="appupdate_2_slide_1_title">Update</string>
    <string name="appupdate_2_slide_1_description">You can use graphs now! Set the checkbox in settings!</string>




    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
