<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.threedevs.aj.HwInfoReceiver.MainActivity" >

    <item android:id="@+id/action_add_server"
        android:icon="?attr/main_menu_add_server"
        android:title="@string/action_addserver"
        app:showAsAction="always"
        android:enabled="true" />

    <item android:id="@+id/action_help"
        android:icon="?attr/main_menu_help"
        android:title="@string/action_help_server"
        app:showAsAction="always"
        android:enabled="true" />

    <item android:id="@+id/action_settings"
        android:icon="?attr/main_menu_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:enabled="true" />


</menu>
