<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.threedevs.aj.HwInfoReceiver.ServerActivity" >

    <item android:id="@+id/action_add_sensor"
        android:icon="?attr/server_menu_add_sensor"
        android:title="@string/action_addsensor"
        app:showAsAction="always"
        android:enabled="true"
        android:visible="true" />

    <item android:id="@+id/action_help"
        android:icon="?attr/server_menu_help"
        android:title="@string/action_help_server"
        app:showAsAction="always"
        android:visible="true"
        android:enabled="true" />

    <item android:id="@+id/action_settings"
        android:icon="?attr/server_menu_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="true"
        android:enabled="true" />
</menu>
